--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -7,7 +7,6 @@ on:
       - 'assets/resume.pdf'
       - 'index.html'
       - 'style.css'
-      
 
 jobs:
   pages:
@@ -25,9 +24,10 @@ jobs:
         uses: actions/configure-pages@v3
 
       - name: Upload site artifact
-        uses: actions/upload-pages-artifact@v1
+        uses: actions/upload-artifact@v3
         with:
-          path: ./         # publish everything in your repo root
+          name: site-artifact
+          path: ./  # publish everything in your repo root
 
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v2
